--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@fontsource/jetbrains-mono": "^4.2.2",
-    "gatsby": "^3.3.1",
+    "gatsby": "^3.5.0",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-manifest": "^3.2.0",
@@ -20,7 +20,9 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-spring": "^9.1.2"
+    "react-spring": "^9.1.2",
+    "react-use-gesture": "^9.1.3",
+    "react-use-measure": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
